--- a/src/index.css
+++ b/src/index.css
@@ -61,10 +61,10 @@ code {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.css-1poimk-MuiPaper-root-MuiMenu-paper-MuiPaper-root-MuiPopover-paper{
+/* .css-1poimk-MuiPaper-root-MuiMenu-paper-MuiPaper-root-MuiPopover-paper{
   left: 95% !important;
   top: 70px !important;
-}
+} */
 
 .layout-design{
   min-height:112vh !important;
