--- a/src/features/Locations/location.scss
+++ b/src/features/Locations/location.scss
@@ -1,3 +1,32 @@
+div.headcard{
+  display: flex;
+  padding: 20px;
+  justify-content: space-between;
+  align-items: center;
+  // position: absolute;
+  width: 100%;
+  height: 60px;
+  margin-bottom: 20px;
+  // top: 120px;
+  background: rgba(204, 229, 255, 0.5);
+  border: 1px solid #CCE5FF;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.06);
+  border-radius: 4px;
+  p.headTitle{
+// font-family: 'Fira Sans';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+color: #003399;
+margin: 0;
+  }
+p.description{
+font-size: 12px;
+color: #494b54;
+margin: 0;
+}
+  
+  }
 .input-field-bottom {
   input {
     margin-bottom: 0.75rem;
