--- a/src/layout/sider.css
+++ b/src/layout/sider.css
@@ -1,13 +1,24 @@
 .ant-menu-dark.ant-menu-dark:not(.ant-menu-horizontal) .ant-menu-item-selected {
 background: rgba(204, 229, 255, 0.2) ;
+box-shadow: inset 2px 0px 0px #FFFFFF;
 }
 
 
 .ant-menu-submenu-selected {
     background: rgba(204, 229, 255, 0.2);
+    box-shadow: inset 2px 0px 0px #FFFFFF;
 }
 
+.ant-menu-title-content{
+    /* background-color: black; */
+}
 
+.ant-menu-item-selected{
+
+    background-color: aquamarine;
+
+
+}
 .ant-menu-dark .ant-menu-item:hover,
 .ant-menu-dark .ant-menu-item-active,
 .ant-menu-dark .ant-menu-submenu-active,
@@ -20,3 +31,23 @@ background: rgba(204, 229, 255, 0.2) ;
     background: rgba(204, 229, 255, 0.2);
 }
 
+
+
+
+.ant-menu-dark .ant-menu-item-selected>a,
+.ant-menu-dark .ant-menu-item-selected>span>a,
+.ant-menu-dark .ant-menu-item-selected>a:hover,
+.ant-menu-dark .ant-menu-item-selected>span>a:hover {
+
+
+    /* background: rgba(204, 229, 255, 0.2);
+    box-shadow: inset 2px 0px 0px #FFFFFF;
+    padding: 10px; */
+
+
+}
+
+
+.ant-layout-sider-trigger{
+    background: rgba(0, 64, 169, 0.5) !important;
+}
