--- a/src/features/forms/addMemberForm.css
+++ b/src/features/forms/addMemberForm.css
@@ -4,9 +4,9 @@ width: 760px !important;
 
 
 
-.css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root{
+/* .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root{
     margin-right: 141px;
-}
+} */
 
 .css-ra13a9-MuiStack-root{
 
