fix: design issues in invite team member module

--- a/src/features/forms/addMemberForm.css
+++ b/src/features/forms/addMemberForm.css
@@ -37,3 +37,15 @@ color: #676879 !important;
     background: #0073EA !important;
     border-radius: 4px;
 }
+
+.css-15k0q1c-MuiStack-root {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    margin-top: 64px;
+    margin-left: 247px !important;
+}
