fix: header design

--- a/src/layout/header.css
+++ b/src/layout/header.css
@@ -17,3 +17,8 @@ margin-top: 2px;
 .css-hyum1k-MuiToolbar-root {
     min-height: 85px !important;
 }
+
+.css-eay8ao {
+    margin-left: 140px !important;
+    width: 25%;
+}
