fix: help icon position

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -50,7 +50,7 @@ legend.css-1ftyaf0 span{
 }
 
 .help-svg{
-      position: absolute;
+      position: fixed;
       bottom: 24px;
       right: 24px;
 }
