--- a/src/features/TeamMemberInvitation/TeamMemberTable.css
+++ b/src/features/TeamMemberInvitation/TeamMemberTable.css
@@ -1,5 +1,4 @@
-
-
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,400;1,300&family=Poppins:ital@1&display=swap');
 .ant-table-tbody>tr:nth-child(2n) {
     background-color:white;
 }
