--- a/src/features/forms/addMemberForm.css
+++ b/src/features/forms/addMemberForm.css
@@ -1,8 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,400;1,300&family=Poppins:ital@1&display=swap');
+
 .ant-drawer-content-wrapper{
 width: 760px !important;
 }
 
-
+.ant-drawer-header{
+    font-family: "Fira Sans";
+}
 
 /* .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root{
     margin-right: 141px;
@@ -20,7 +25,7 @@ width: 760px !important;
 
 .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input{
     background: #F4F6F9 !important;
-    border: 1px solid #C5C7D0 !important;
+    /* border: 1px solid #C5C7D0 !important; */
 }
 
 /* css-1rwt2y5-MuiButtonBase-root-MuiButton-root{
