--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -64,3 +64,21 @@ legend.css-1ftyaf0 span{
 // .ant-layout-content{
 //   background-color: #F5F7FB;
 // }
+
+.swiper {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 400px;
+  height: 400px;
+}
+
+// .swiper-slide img {
+//   display: block;
+//   width: 100%;
+// }
