--- a/src/features/servicePackages/ActiveCard.css
+++ b/src/features/servicePackages/ActiveCard.css
@@ -1,13 +1,13 @@
-.card-div{
+.card-div {
 
     background-color: white;
-    width: 430px ;
+    width: 430px;
     height: 410px;
     margin: 20px 0px;
     border: 2px solid white;
 }
 
-.card-title{
+.card-title {
     width: 430px;
     height: 48px;
     display: flex;
@@ -15,66 +15,67 @@
     justify-content: space-between;
     padding: 0 10px;
 }
-h3{
+
+h3 {
     font-family: 'Fira Sans';
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
     line-height: 20px;
 
-    
-    
+
+
     color: #003399;
 }
 
 
-.card-img{
+.card-img {
     width: 430px;
     height: 153px;
 }
 
-img{
+/* img{
     width: 430px;
     height: 153px;
-}
+} */
 
-.card-description{
+.card-description {
 
     height: 87px;
-  padding: 11px;
+    padding: 11px;
 
 }
 
-p{
+p {
     font-family: 'Fira Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     /* or 167% */
-    
-    
+
+
     color: #000000;
 }
 
-.card-footer{
+.card-footer {
     display: flex;
     height: 76px;
-        align-items: center;
-        justify-content: space-between;
-        margin-top: 59px;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 59px;
 
 
-        width: 430px;
-        flex-direction: row;
-        padding: 8px 16px;
-        background: #F5F7FB;
-        border-radius: 0px 0px 4px 4px;
+    width: 430px;
+    flex-direction: row;
+    padding: 8px 16px;
+    background: #F5F7FB;
+    border-radius: 0px 0px 4px 4px;
 
 }
 
 
-.price{
+.price {
     font-family: 'Fira Sans';
     font-style: normal;
     font-weight: 700;
@@ -82,23 +83,23 @@ p{
     display: flex;
     line-height: 24px;
     /* identical to box height */
-    
+
     text-transform: capitalize;
-    
+
     color: #003399;
 }
 
 
-.btn{
+.btn {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px 20px;
-    
+
     width: 107px;
     height: 40px;
-    
+
     background: rgba(17, 17, 17, 0.12);
     border: 1px solid #676879;
     border-radius: 4px;
