Text-field and Reset pasword form button UI Fixes

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -41,9 +41,12 @@
 }
 
 
-input::placeholder,
 label.MuiInputLabel-root,
 label.MuiInputLabel-formControl {
+  font-weight: bold !important;
+}
+
+input::placeholder {
   font-weight: bold !important;
   opacity: 0.5 !important;
 }
