Password Meter Added

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -103,3 +103,11 @@ legend.css-1ftyaf0 span {
 //   display: block;
 //   width: 100%;
 // }
+
+.passwordMeter {
+  div {
+    div {
+      height: 4px !important;
+    }
+  }
+}
