--- a/src/features/TeamMemberInvitation/TeamMemberTable.css
+++ b/src/features/TeamMemberInvitation/TeamMemberTable.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,400;1,300&family=Poppins:ital@1&display=swap');
+
 .ant-table-tbody>tr:nth-child(2n) {
-    background-color:white;
+    background-color: white;
 }
 
 
-.ant-table table{
+.ant-table table {
     margin-top: 6px;
 
     font-family: "Fira Sans";
@@ -18,6 +19,6 @@
     width: 70px;
 }
 
-.ant-table{
-    height: 532px;
+.ant-table {
+    /* height: 532px; */
 }
