--- a/src/features/servicePackages/servicePackages.css
+++ b/src/features/servicePackages/servicePackages.css
@@ -2,3 +2,7 @@
     background: #CCE5FF !important;
     box-shadow: inset 0px -3px 0px #003399;
 }
+
+.ck.ck-editor__main>.ck-editor__editable:not(.ck-focused) {
+    height: 125px;
+}
