fixing; package module

--- a/src/features/servicePackages/packagesCards/premiumCard.css
+++ b/src/features/servicePackages/packagesCards/premiumCard.css
@@ -16,5 +16,5 @@ cursor: pointer;
 }
 
 .ant-modal-header{
-    background-color: #D83A52 !important;
+    /* background-color: #D83A52 !important; */
 }
