--- a/src/features/forms/addMemberForm.css
+++ b/src/features/forms/addMemberForm.css
@@ -19,7 +19,7 @@ width: 53% !important;
     margin-left: 0 !important;
 }
 .ant-drawer-body{
-    overflow: hidden !important;
+    /* overflow: hidden !important; */
 }
 
 
