--- a/src/features/forms/AddRoomCard.css
+++ b/src/features/forms/AddRoomCard.css
@@ -7,6 +7,7 @@
     width: 297px;
     height: 231px;
     background: #FFFFFF;
+    margin: 8px;
     border: 1px solid #C5C7D0;
     border-radius: 4px;
 }
