--- a/src/features/Locations/location.scss
+++ b/src/features/Locations/location.scss
@@ -67,3 +67,13 @@ margin: 0;
     background-color: red;
   }
 }
+
+
+.card-hover{
+
+}
+
+.card-hover:hover{
+  box-shadow: 4px 4px 12px rgba(0, 115, 234, 0.22);
+  cursor: pointer;
+}
